fixed java options